--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=PetJava
-spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME:petjava_db}
+spring.application.name=JavaPet
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME:javapet_db}
 spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASSWORD:petjava123}
+spring.datasource.password=${DB_PASSWORD:javapet123}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
