--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=JavaPet
-spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME:javapet_db}
-spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASSWORD:javapet123}
+spring.datasource.url=jdbc:postgresql://localhost:5432/javapet_db
+spring.datasource.username=postgres
+spring.datasource.password=johnatan123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=validate
+
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
